k8s/api.yaml
# k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
    labels:
        app: api
spec:
    replicas: 2 # One replica for redundancy
    selector:
        matchLabels:
            app: api
    template:
        metadata:
            labels:
                app: api
        spec:
            containers:
                - name: api
                  image: aqibilyas/api:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 8000
                  readinessProbe:
                      httpGet:
                          path: /docs # FastAPI docs endpoint
                          port: 8000
                      initialDelaySeconds: 10
                      periodSeconds: 10
                  resources:
                      requests:
                          memory: "500Mi"
                          cpu: "250m"
                      limits:
                          memory: "1Gi"
                          cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
    name: api
spec:
    selector:
        app: api
    type: NodePort
    ports:
        - name: http
          port: 8000
          nodePort: 30001
          targetPort: 8000
